--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #3b264c;
+    background-color: #6f6f6f;
     color: #333;
     font-family: Arial, sans-serif;
     margin: 0;
@@ -8,7 +8,7 @@ body {
 
 main {
     text-align: center;
-    background-color: #c1afbf;
+    background-color: #c0c0c0;
     padding: 25px;
     margin: 20px auto;
     max-width: 800px;
