--- a/style.css
+++ b/style.css
@@ -15,3 +15,9 @@ main {
     box-shadow: 0 0 10px #00000080;
     height: 100%;
 }
+
+#highScore {
+    font-size: 1.5em;
+    margin: 0;
+    text-align: right;
+}
