--- a/style.css
+++ b/style.css
@@ -4,11 +4,14 @@ body {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     margin: 0;
-    height: 60vh;
+    height: 30em;
 }
 
 main {
     text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background-color: #c0c0c0;
     padding: 25px;
     margin: 20px auto;
@@ -18,9 +21,18 @@ main {
 }
 
 #timer {
+    align-items: center;
+    position: absolute;
+    width: 100px;
+    height: 100px;
+}
+
+#timerText, #timerCanvas {
     font-size: 1.5em;
     margin: 0;
     text-align: center;
+    position: absolute;
+    width: 100%;
 }
 
 #score {
